--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,18 +8,21 @@
     "@types/react": "16.8.3",
     "@types/react-dom": "16.8.1",
     "@types/react-redux": "^7.0.1",
+    "json-server": "^0.14.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json": "json-server -p 3500 restData.js"
   },
   "eslintConfig": {
     "extends": "react-app"
