--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,10 +8,13 @@
     "@types/react": "16.8.3",
     "@types/react-dom": "16.8.1",
     "@types/react-redux": "^7.0.1",
+    "@types/react-router-dom": "^4.3.1",
     "json-server": "^0.14.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
