--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.8.1",
     "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-test-renderer": "^16.8.1",
     "json-server": "^0.14.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -16,6 +17,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-test-renderer": "^16.8.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "typescript": "3.3.3"
