--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,8 @@
     "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-test-renderer": "^16.8.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "json-server": "^0.14.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -37,5 +39,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.4"
+  }
 }
